@@ -6,7 +6,7 @@
     <parent>
         <groupId>uk.gov.companieshouse</groupId>
         <artifactId>companies-house-parent</artifactId>
-        <version>2.1.5</version>
+        <version>2.1.6</version>
         <relativePath/>
     </parent>
     <artifactId>efs-submission-web</artifactId>
@@ -18,43 +18,59 @@
         <skip.integration.tests>false</skip.integration.tests>
         <skip.unit.tests>false</skip.unit.tests>
 
-        <java.version>1.8</java.version>
-        <java-session-handler.version>2.2.0</java-session-handler.version>
-        <private-api-sdk-java.version>2.0.325</private-api-sdk-java.version>
-        <sdk-manager-java.version>1.5.10</sdk-manager-java.version>
-        <rest-service-common-library.version>0.0.3</rest-service-common-library.version>
-        <environment-reader-library.version>1.3.2</environment-reader-library.version>
-        <common-web-java.version>1.5.2</common-web-java.version>
-        <commons-fileupload.version>1.4</commons-fileupload.version>
+        <java.version>21</java.version>
+        <java-session-handler.version>4.1.0</java-session-handler.version>
+        <private-api-sdk-java.version>4.0.195</private-api-sdk-java.version>
+        <sdk-manager-java.version>3.0.9</sdk-manager-java.version>
+        <rest-service-common-library.version>2.0.2</rest-service-common-library.version>
+        <environment-reader-library.version>3.0.1</environment-reader-library.version>
+        <common-web-java.version>3.0.23</common-web-java.version>
+        <commons-fileupload2-jakarta-servlet6.version>2.0.0-M2</commons-fileupload2-jakarta-servlet6.version>
+        <awaitility.version>4.2.2</awaitility.version>
+        <hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
+        <nimbus-jose-jwt.version>9.41.1</nimbus-jose-jwt.version>
 
         <!-- Logging -->
-        <log4j-bom.version>2.17.0</log4j-bom.version>
-        <structured-logging.version>1.9.12</structured-logging.version>
+        <log4j-bom.version>2.24.0</log4j-bom.version>
+        <structured-logging.version>3.0.14</structured-logging.version>
+        <jboss-logging.version>3.6.1.Final</jboss-logging.version>
 
         <thymeleaf-layout-dialect.version>3.3.0</thymeleaf-layout-dialect.version>
-        <commons-lang3.version>3.10</commons-lang3.version>
-        <equalsverifier.version>3.1.6</equalsverifier.version>
-        <system-lambda.version>1.2.0</system-lambda.version>
+        <commons-lang3.version>3.17.0</commons-lang3.version>
+        <equalsverifier.version>3.16.2</equalsverifier.version>
+        <system-lambda.version>1.2.1</system-lambda.version>
 
-        <mock-server.version>5.6.0</mock-server.version>
+        <!-- Mockito -->
+        <mockito-core.version>5.13.0</mockito-core.version>
+        <mockito-junit-jupiter.version>5.13.0</mockito-junit-jupiter.version>
+
+        <junit-jupiter-params.version>5.10.0</junit-jupiter-params.version>
+        <junit-platform-engine.version>1.10.0</junit-platform-engine.version>
+        <junit-platform-launcher.version>1.10.0</junit-platform-launcher.version>
+        <junit-platform-commons.version>1.10.0</junit-platform-commons.version>
+        <mock-server.version>5.15.0</mock-server.version>
 
         <!-- Security -->
-        <web-security-java.version>1.3.10</web-security-java.version>
+        <web-security-java.version>3.1.0</web-security-java.version>
 
         <!-- Spring -->
-        <spring-boot-dependencies.version>2.7.18</spring-boot-dependencies.version>
-        <spring-test.version>5.2.0.RELEASE</spring-test.version>
+        <spring-boot-dependencies.version>3.3.3</spring-boot-dependencies.version>
+        <spring-test.version>6.1.13</spring-test.version>
         <spring-boot-maven-plugin.version>${spring-boot-dependencies.version}</spring-boot-maven-plugin.version>
 
         <!-- Maven -->
-        <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
-        <maven-failsafe-plugin.version>3.2.2</maven-failsafe-plugin.version>
-        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
-        <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
+        <maven-surefire-plugin.version>3.5.0</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>3.5.0</maven-failsafe-plugin.version>
+        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+        <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
+        <maven-antrun-plugin.version>3.1.0</maven-antrun-plugin.version>
+        <jib-maven-plugin.version>3.4.2</jib-maven-plugin.version>
 
-        <junit-jupiter-params.version>5.5.2</junit-jupiter-params.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+
         <!-- Sonar dependency -->
-        <sonar-maven-plugin.version>3.7.0.1746</sonar-maven-plugin.version>
+        <sonar-maven-plugin.version>4.0.0.4121</sonar-maven-plugin.version>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.projectKey>uk.gov.companieshouse:efs-submission-web</sonar.projectKey>
         <sonar.sources>src/main</sonar.sources>
@@ -69,6 +85,7 @@
             ${project.basedir}/target/dependency-check-report.html
         </sonar.dependencyCheck.htmlReportPath>
         <sonar.java.binaries>${project.basedir}/target</sonar.java.binaries>
+        <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
     </properties>
 
     <dependencyManagement>
@@ -82,6 +99,11 @@
                 <version>${log4j-bom.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.logging</groupId>
+                <artifactId>jboss-logging</artifactId>
+                <version>${jboss-logging.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -125,14 +147,37 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-core.version}</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.ethlo.time</groupId>
+                    <artifactId>itu</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito-junit-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>uk.gov.companieshouse</groupId>
             <artifactId>java-session-handler</artifactId>
             <version>${java-session-handler.version}</version>
         </dependency>
         <dependency>
-            <groupId>commons-fileupload</groupId>
-            <artifactId>commons-fileupload</artifactId>
-            <version>${commons-fileupload.version}</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-fileupload2-jakarta-servlet6</artifactId>
+            <version>${commons-fileupload2-jakarta-servlet6.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -140,12 +185,28 @@
             <artifactId>mockserver-netty</artifactId>
             <version>${mock-server.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.ethlo.time</groupId>
+                    <artifactId>itu</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.mock-server</groupId>
             <artifactId>mockserver-client-java</artifactId>
             <version>${mock-server.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>nz.net.ultraq.thymeleaf</groupId>
@@ -162,10 +223,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.cache</groupId>
-            <artifactId>cache-api</artifactId>
         </dependency>
 
         <!-- SDKs -->
@@ -214,7 +271,7 @@
         <dependency>
             <groupId>org.awaitility</groupId>
             <artifactId>awaitility</artifactId>
-            <version>3.1.6</version>
+            <version>${awaitility.version}</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -229,8 +286,38 @@
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit-jupiter-params.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit-jupiter-params.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
             <version>${junit-jupiter-params.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-commons</artifactId>
+            <version>${junit-platform-commons.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-engine</artifactId>
+            <version>${junit-platform-engine.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>${junit-platform-launcher.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -244,13 +331,13 @@
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>6.2.5.Final</version>
+            <version>${hibernate-validator.version}</version>
         </dependency>
         <!-- Latest compatible com.nimbus-jose-jwt version -->
         <dependency>
             <groupId>com.nimbusds</groupId>
             <artifactId>nimbus-jose-jwt</artifactId>
-            <version>8.20.1</version>
+            <version>${nimbus-jose-jwt.version}</version>
         </dependency>
     </dependencies>
 
@@ -293,8 +380,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -307,6 +395,9 @@
                     </excludes>
                     <skipTests>${skip.unit.tests}</skipTests>
                     <trimStackTrace>false</trimStackTrace>
+                    <environmentVariables>
+                        <DOCUMENT_API_LOCAL_URL>chs.local</DOCUMENT_API_LOCAL_URL>
+                    </environmentVariables>
                 </configuration>
             </plugin>
             <plugin>
@@ -315,11 +406,14 @@
                 <version>${maven-failsafe-plugin.version}</version>
                 <configuration>
                     <!--suppress UnresolvedMavenProperty -->
-                    <argLine>${failsafeArgLine}</argLine>
+                    <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
 
                     <!--This is a workaround for failsafe not running integration tests-->
                     <!-- https://stackoverflow.com/a/52532095 -->
                     <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+                    <environmentVariables>
+                        <DOCUMENT_API_LOCAL_URL>chs.local</DOCUMENT_API_LOCAL_URL>
+                    </environmentVariables>
                 </configuration>
                 <executions>
                     <execution>
@@ -333,7 +427,7 @@
             <!-- See Workaround Note above for Tilt infinite rebuild loop -->
             <plugin>
                 <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.8</version>
+                <version>${maven-antrun-plugin.version}</version>
                 <executions>
                     <execution>
                         <phase>compile</phase>
@@ -358,38 +452,22 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${jacoco-maven-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>pre-integration-test</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                        <configuration>
-                            <!-- Sets the path to the file which contains the execution data. -->
-                            <destFile>${sonar.jacoco.reports}/jacoco-it.exec</destFile>
-                            <propertyName>failsafeArgLine</propertyName>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>post-integration-test</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                        <configuration>
-                            <!-- Sets the path to the file which contains the execution data. -->
-                            <dataFile>${sonar.jacoco.reports}/jacoco-it.exec</dataFile>
-                            <!-- Sets the output directory for the code coverage report. -->
-                            <outputDirectory>${sonar.jacoco.reports}/jacoco-it</outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>${jib-maven-plugin.version}</version>
+                <configuration>
+                    <from>
+                        <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/ci-corretto-build-21:latest</image>
+                    </from>
+                    <to>
+                        <image>169942020521.dkr.ecr.eu-west-2.amazonaws.com/local/efs-submission-web:latest</image>
+                    </to>
+                    <container>
+                        <expandClasspathDependencies>true</expandClasspathDependencies>
+                    </container>
+                </configuration>
             </plugin>
         </plugins>
     </build>
